Added flexbox to the page. Minor changes in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -23,33 +23,59 @@
                 </li>
             </ul>
         </div>
-        <div class="title">This Website is Awesome</div>
-        <div class="subtext">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
-        <button>Sign Up</button>
-        <img class="main-image" src=".images/main-image.png" alt="Main Image">
 
-        <div class="information">Some Random Information</div>
+        <div class="title-container">
+            <div class="text-container">
+                <div class="title">This Website is Awesome</div>
+                <div class="subtext">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
+                <button>Sign Up</button>
+            </div>
+
+            <img class="main-image" src=".images/main-image.png" alt="Main Image">
+
+        </div>
+
+        <div class="information-container">
+            <div class="information">Some Random Information</div>
         
-        <img scr=".images/redstar.png" alt="Red Star">
-        <div class="text">This is some subtext under an illustration or an image</div>
+            <div class="img-group">
+                <div class="img-info">
+                    <img scr=".images/redstar.png" alt="Red Star">
+                    <div class="text">This is some subtext under an illustration or an image</div>
+                </div>
+                <div class="img-info">
+                    <img scr=".images/bluestar.png" alt="Blue Star">
+                    <div class="text">This is some subtext under an illustration or an image</div>
+                </div>
+                <div class="img-info">
+                    <img scr=".images/pinkstar.png" alt="Pink Star">
+                    <div class="text">This is some subtext under an illustration or an image</div>                    
+                </div>
+                <div class="img-info">
+                    <img scr=".images/greenstar.png" alt="Green Star">
+                    <div class="text">This is some subtext under an illustration or an image</div>                    
+                </div>
+            </div>
+        </div>
 
-        <img scr=".images/bluestar.png" alt="Blue Star">
-        <div class="text">This is some subtext under an illustration or an image</div>
+        <div class="quote-container">
+            <div class="quote-text">
+                <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people would actually read it. 
+                    Who knows? All I know is that it looks nice.</div>
+                <div class="quote-name">Thor, God of Thunder.</div>
+            </div>
+        </div>
 
-        <img scr=".images/pinkstar.png" alt="Pink Star">
-        <div class="text">This is some subtext under an illustration or an image</div>
-
-        <img scr=".images/greenstar.png" alt="Green Star">
-        <div class="text">This is some subtext under an illustration or an image</div>
-
-        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people would actually read it. 
-            Who knows? All I know is that it looks nice.</div>
-        <div class="quote-name">Thor, God of Thunder.</div>
 
         <div class="sign-banner">
-            <div class="text">Call to action! it's time!</div>
-            <div class="text smaller">Sign up for our product by clicking that button over there!</div>
-            <button>Sign Up</button>
+            <div class="text-container">
+                <div class="text">Call to action! it's time!</div>
+                <div class="text smaller">Sign up for our product by clicking that button over there!</div>
+            </div>
+            <div class="button">
+                <button>Sign Up</button>
+            </div>
+
         </div>
 
         <div class="footer">
