--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <body>
         <div class="header">
-            <img class="logo" src=".images/logo.png" alt="Logo">
+          <!--  <img class="logo" src=".images/logo.png" alt="Logo"> Line commented for testing purposes--> 
+          <div class="logo">Header Logo</div>
+
             <ul>
                 <li>
                     <a href="#">Link One</a>
@@ -62,7 +64,7 @@
             <div class="quote-text">
                 <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people would actually read it. 
                     Who knows? All I know is that it looks nice.</div>
-                <div class="quote-name">Thor, God of Thunder.</div>
+                <div class="quote-name">-Thor, God of Thunder.</div>
             </div>
         </div>
 
