Added images and final touches

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button>Sign Up</button>
             </div>
 
-            <img class="main-image" src=".images/main-image.png" alt="Main Image">
+            <img class="main-image" src="https://cdn.pixabay.com/photo/2018/08/19/02/41/star-3615974_960_720.png" alt="Main Image">
 
         </div>
 
@@ -42,19 +42,19 @@
         
             <div class="img-group">
                 <div class="img-info">
-                    <img scr=".images/redstar.png" alt="Red Star">
+                    <img src="./images/red-star.png" alt="Red Star"/>
                     <div class="text">This is some subtext under an illustration or an image</div>
                 </div>
                 <div class="img-info">
-                    <img scr=".images/bluestar.png" alt="Blue Star">
+                    <img src="./images/purple-star.png" alt="Purple Star">
                     <div class="text">This is some subtext under an illustration or an image</div>
                 </div>
                 <div class="img-info">
-                    <img scr=".images/pinkstar.png" alt="Pink Star">
+                    <img src="./images/yellow-star.png" alt="Yellow Star">
                     <div class="text">This is some subtext under an illustration or an image</div>                    
                 </div>
                 <div class="img-info">
-                    <img scr=".images/greenstar.png" alt="Green Star">
+                    <img src="./images/green-star.png" alt="Green Star">
                     <div class="text">This is some subtext under an illustration or an image</div>                    
                 </div>
             </div>
@@ -71,8 +71,8 @@
 
         <div class="sign-banner">
             <div class="text-container">
-                <div class="text">Call to action! it's time!</div>
-                <div class="text smaller">Sign up for our product by clicking that button over there!</div>
+                <div class="text bolder">Call to action! it's time!</div>
+                <div class="text">Sign up for our product by clicking that button over there!</div>
             </div>
             <div class="button">
                 <button>Sign Up</button>
